# budget_app

./: .env.example  .gitignore  README.md  com.seanlewis.budgetapp.sync.plist  package-lock.json  package.json  pyproject.toml  setup-wizard-prototype.html  splash-prototype.html  start.sh
.github/workflows/: build-release.yml  deploy-website.yml  pages.yml
Budget/: ARCHITECTURE_PLAN.md  Budget 2025.xlsx  Pay (2025).xlsx  seed_data_fix.py
Budget App.app/Contents/: Info.plist
Budget/Archive/: Budget 2024.xlsx
Budget/Py_budget/: 1.) Budget_2025.ipynb  2.) WF_Budget_2025.ipynb  3.) Sofi_Checking__Budget_2025.ipynb  4.) Sofi_Budget_2025.ipynb  5.) Combine.ipynb
backend/: budget-app.spec  database.py  investments_database.py  main.py  migrations.py  models.py  models_investments.py  requirements.txt  run_app.py  sync_daemon.py
backend/routers/: accounts.py  archive.py  budgets.py  categories.py  import_csv.py  insights.py  investments.py  notifications.py  settings.py  transactions.py
backend/scripts/: count_transactions.py  fix_care_credit.py  fix_care_credit_signs.py  fix_categories.py  fix_discover_payments.py  income_audit.py  inspect_account.py  inspect_roundups.py  migrate_categories.py  rollback_care_credit.py
backend/services/: archive_importer.py  categorize.py  financial_advisor.py  (+4 more)
docs/: index.html  styles.css
electron/: backend-manager.js  main.js  preload.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: backfill_sync_logs.py  import_all_archives.py  setup-db-backup.sh
website/: index.html  styles.css
(+127 files in other folders)
